fixed bug spacing about section

--- a/app/public/assets/css/responsive.css
+++ b/app/public/assets/css/responsive.css
@@ -18,7 +18,7 @@
         padding-top: 10%;
     }
     .about {
-        margin-top: -3%;
+        margin-top: -1%;
         padding-top: 5%;
     }
     /*Graphic Design Section*/
